[gd_scene load_steps=8 format=2]

[ext_resource path="res://Objects/Jugador.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/BossFinal/BossFinalFase2Control.gd" type="Script" id=2]
[ext_resource path="res://Objects/Enemigos/BossFinal.tscn" type="PackedScene" id=3]
[ext_resource path="res://Sounds/Musica/mus_dankula_2.ogg" type="AudioStream" id=4]
[ext_resource path="res://Fondos/Nivel4/bg_nivel4_2.png" type="Texture" id=5]
[ext_resource path="res://Fondos/Nivel4/bg_nivel4_1.png" type="Texture" id=6]

[sub_resource type="Animation" id=1]
resource_name = "anim_desvanecer_a_blanco"
length = 8.0
tracks/0/type = "value"
tracks/0/path = NodePath("Blanco/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 4, 6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="BossFinalFase2" type="Node2D" groups=[
"jugable",
]]
script = ExtResource( 2 )
jugador = ExtResource( 1 )
boss = ExtResource( 3 )

[node name="Musica" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -3.0
autoplay = true
bus = "Musica"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/anim_desvanecer_a_blanco = SubResource( 1 )

[node name="Blanco" type="Node2D" parent="."]
z_index = 5

[node name="ColorRect" type="ColorRect" parent="Blanco"]
margin_right = 640.0
margin_bottom = 360.0
color = Color( 1, 1, 1, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="Capa1" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 1280, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/Capa1"]
texture = ExtResource( 6 )
centered = false

[node name="Capa2" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 1280, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/Capa2"]
texture = ExtResource( 5 )
centered = false
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
